cmake_minimum_required(VERSION 3.8)

project(algorithms)

include(${PROJECT_SOURCE_DIR}/cmake/ProjectOptions.cmake)
include(${PROJECT_SOURCE_DIR}/cmake/ProjectConfigs.cmake)

add_subdirectory(${PROJECT_SOURCE_DIR}/src/union-find)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/stack)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/queue)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/selection)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/list)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/sort)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/tools)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/tree)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/geometry)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/hash)
add_subdirectory(${PROJECT_SOURCE_DIR}/src/graph)
if(ALG_ENABLE_EVENT_DRIVEN)
    add_subdirectory(${PROJECT_SOURCE_DIR}/src/event-driven)
endif()
